tests/codegen/fail/interface/struct/derive_implementers_duplicate_pretty.rs
use juniper::{GraphQLInterface, GraphQLObject};

#[derive(GraphQLObject)]
#[graphql(impl = CharacterValue)]
pub struct ObjA {
    id: String,
}

#[derive(GraphQLInterface)]
#[graphql(for = [ObjA, ObjA])]
struct Character {
    id: String,
}

fn main() {}
