tests/codegen/fail/interface/struct/derive_implementers_duplicate_pretty.stderr
error: duplicated attribute argument found
  --> fail/interface/struct/derive_implementers_duplicate_pretty.rs:10:24
   |
10 | #[graphql(for = [ObjA, ObjA])]
   |                        ^^^^

error[E0412]: cannot find type `CharacterValue` in this scope
 --> fail/interface/struct/derive_implementers_duplicate_pretty.rs:4:18
  |
4 | #[graphql(impl = CharacterValue)]
  |                  ^^^^^^^^^^^^^^ not found in this scope

error[E0080]: evaluation of constant value failed
 --> fail/interface/struct/derive_implementers_duplicate_pretty.rs:3:10
  |
3 | #[derive(GraphQLObject)]
  |          ^^^^^^^^^^^^^ referenced constant has errors
  |
  = note: this error originates in the macro `$crate::const_concat` which comes from the expansion of the derive macro `GraphQLObject` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
 --> fail/interface/struct/derive_implementers_duplicate_pretty.rs:3:10
  |
3 | #[derive(GraphQLObject)]
  |          ^^^^^^^^^^^^^ referenced constant has errors
  |
  = note: this error originates in the macro `$crate::const_concat` which comes from the expansion of the derive macro `GraphQLObject` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
 --> fail/interface/struct/derive_implementers_duplicate_pretty.rs:3:10
  |
3 | #[derive(GraphQLObject)]
  |          ^^^^^^^^^^^^^ referenced constant has errors
  |
  = note: this error originates in the macro `$crate::const_concat` which comes from the expansion of the derive macro `GraphQLObject` (in Nightly builds, run with -Z macro-backtrace for more info)
